[package]
name = "yaxpeax-avr"
description = "AVR instruction set decoder for yaxpeax"
authors = [ "The6P4C <watsonjcampbell@gmail.com>" ]
version = "0.0.3"
license = "0BSD"
edition = "2018"
repository = "https://github.com/The6P4C/yaxpeax-avr"

[dependencies]
yaxpeax-arch = { version = "0.2.3", default-features = false, features = [] }
